[package]
name = "thrussh"
description = "A client and server SSH library. Memory-safe, doesn't do its own crypto (based on *ring*)."
keywords = ["ssh"]
version = "0.7.0"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
repository = "https://pijul.org/thrussh"
homepage = "https://pijul.org/thrussh"
documentation = "https://pijul.org/thrussh/doc/thrussh"
license = "Apache-2.0"
include = [
        "Cargo.toml",
        "src/server/mod.rs",
        "src/server/encrypted.rs",
        "src/negociation.rs",
        "src/kex.rs",
        "src/auth.rs",
        "src/cryptobuf.rs",
        "src/cipher",
        "src/cipher/mod.rs",
        "src/cipher/chacha20poly1305.rs",
        "src/msg.rs",
        "src/lib.rs",
        "src/encoding.rs",
        "src/client",
        "src/client/mod.rs",
        "src/client/encrypted.rs",
        "src/key.rs",
        "src/session.rs",
        "src/sshbuffer.rs",
        "src/pty.rs"
        ]

[dependencies]
arrayref = "0.3.2"
byteorder = "0.5"
bitflags = "0.7"
libc = "0.2"
log = "0.3"
ring = { path = "../ring" }
rustc-serialize = "0.3"
time = "0.1"
untrusted = "0.3.1"
mio = "0.6"
regex = "0.1"
user = "0.1.1"
cryptovec = "0.2"

tokio-core = "*"
futures = "*"

env_logger = "*"

[dev-dependencies]
tempdir="0.3"
